[gd_scene load_steps=2 format=3 uid="uid://bmenu7xqp4321"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "GLITCH RUNNER"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "The Perfect Game (Zero Bugs!)"
horizontal_alignment = 1

[node name="ConfidenceLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Claude's Confidence: 101%"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(200, 40)
text = "PLAY PERFECT GAME"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(200, 40)
text = "SETTINGS (Already Perfect)"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(200, 40)
text = "CREDITS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
custom_minimum_size = Vector2(200, 40)
text = "QUIT"

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -30.0
offset_right = 200.0
offset_bottom = -10.0
text = "Version 0.1.0 - Flawless Edition"
horizontal_alignment = 0

[node name="BugCountLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -30.0
offset_right = -10.0
offset_bottom = -10.0
text = "Bug Count: 0"
horizontal_alignment = 2

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="start_game"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="open_settings"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="show_credits"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="quit_game"]